// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps Steps horizontal demo works fine 1`] = `
<horizontal>
  <wx-view
    class="demo-desc"
  >
    水平带序号步骤条
  </wx-view>
  <wx-view
    class="block"
  >
    <t-steps
      current="{{1}}"
      bind:change="onFirstChange"
    >
      <t-step-item
        content="辅助信息"
        title="已完成"
      />
      <t-step-item
        content="辅助信息"
        title="当前步骤"
      />
      <t-step-item
        content="辅助信息"
        title="未完成"
      />
      <t-step-item
        content="辅助信息"
        title="未完成"
      />
    </t-steps>
  </wx-view>
  <wx-view
    class="demo-desc"
  >
    水平带图标步骤条
  </wx-view>
  <wx-view
    class="block"
  >
    <t-steps
      current="{{1}}"
      bind:change="onSecondChange"
    >
      <t-step-item
        content="辅助信息"
        icon="cart"
        title="已完成"
      />
      <t-step-item
        content="辅助信息"
        icon="cart"
        title="当前步骤"
      />
      <t-step-item
        content="辅助信息"
        icon="cart"
        title="未完成"
      />
      <t-step-item
        content="辅助信息"
        icon="cart"
        title="未完成"
      />
    </t-steps>
  </wx-view>
  <wx-view
    class="demo-desc"
  >
    水平简略步骤条
  </wx-view>
  <wx-view
    class="block"
  >
    <t-steps
      current="{{1}}"
      theme="dot"
      bind:change="onThirdChange"
    >
      <t-step-item
        content="辅助信息"
        title="已完成"
      />
      <t-step-item
        content="辅助信息"
        title="当前步骤"
      />
      <t-step-item
        content="辅助信息"
        title="未完成"
      />
      <t-step-item
        content="辅助信息"
        title="未完成"
      />
    </t-steps>
  </wx-view>
</horizontal>
`;

exports[`Steps Steps special demo works fine 1`] = `
<special>
  <wx-view
    class="demo-desc"
  >
    垂直自定义步骤条
  </wx-view>
  <wx-view
    class="block"
  >
    <t-steps
      current="{{3}}"
      layout="vertical"
      theme="dot"
      bind:change="onCascader"
    >
      <t-step-item
        title="已完成步骤"
      >
        <t-icon
          color="rgba(0, 0, 0, .4)"
          name="chevron-right"
          size="22"
          slot="title-right"
        />
      </t-step-item>
      <t-step-item
        title="已完成步骤"
      >
        <t-icon
          color="rgba(0, 0, 0, .4)"
          name="chevron-right"
          size="22"
          slot="title-right"
        />
      </t-step-item>
      <t-step-item
        title="已完成步骤"
      >
        <t-icon
          color="rgba(0, 0, 0, .4)"
          name="chevron-right"
          size="22"
          slot="title-right"
        />
      </t-step-item>
      <t-step-item
        title="当前步骤"
      >
        <t-icon
          color="rgba(0, 0, 0, .4)"
          name="chevron-right"
          size="22"
          slot="title-right"
        />
      </t-step-item>
    </t-steps>
    <t-button
      block="{{true}}"
      style="margin-top: 32rpx; display: block"
      bind:tap="toNext"
    >
      下一步
    </t-button>
  </wx-view>
  <wx-view
    class="demo-desc"
  >
    纯展示步骤条
  </wx-view>
  <wx-view
    class="block"
  >
    <t-steps
      current="{{5}}"
      layout="vertical"
      readonly="{{true}}"
      theme="dot"
    >
      <t-step-item
        content="可自定义此处内容"
        title="步骤展示"
      />
      <t-step-item
        content="可自定义此处内容"
        title="步骤展示"
      />
      <t-step-item
        content="可自定义此处内容"
        title="步骤展示"
      />
      <t-step-item
        content="可自定义此处内容"
        title="步骤展示"
      />
    </t-steps>
  </wx-view>
</special>
`;

exports[`Steps Steps status demo works fine 1`] = `
<status>
  <wx-view
    class="block"
  >
    <t-steps
      current="{{1}}"
      currentStatus="error"
      bind:change="onFirstChange"
    >
      <t-step-item
        content="辅助信息"
        title="已完成"
      />
      <t-step-item
        content="辅助信息"
        title="错误步骤"
      />
      <t-step-item
        content="辅助信息"
        title="未完成"
      />
      <t-step-item
        content="辅助信息"
        title="未完成"
      />
    </t-steps>
  </wx-view>
  <wx-view
    class="block"
  >
    <t-steps
      current="{{1}}"
      currentStatus="error"
      bind:change="onSecondChange"
    >
      <t-step-item
        content="辅助信息"
        icon="cart"
        title="已完成"
      />
      <t-step-item
        content="辅助信息"
        icon="cart"
        title="错误步骤"
      />
      <t-step-item
        content="辅助信息"
        icon="cart"
        title="未完成"
      />
      <t-step-item
        content="辅助信息"
        icon="cart"
        title="未完成"
      />
    </t-steps>
  </wx-view>
  <wx-view
    class="block"
  >
    <t-steps
      current="{{1}}"
      currentStatus="error"
      theme="dot"
      bind:change="onThirdChange"
    >
      <t-step-item
        content="辅助信息"
        title="已完成"
      />
      <t-step-item
        content="辅助信息"
        title="错误步骤"
      />
      <t-step-item
        content="辅助信息"
        title="未完成"
      />
      <t-step-item
        content="辅助信息"
        title="未完成"
      />
    </t-steps>
  </wx-view>
</status>
`;

exports[`Steps Steps vertical demo works fine 1`] = `
<vertical>
  <wx-view
    class="demo-desc"
  >
    垂直带序号步骤条
  </wx-view>
  <wx-view
    class="block"
  >
    <t-steps
      current="{{1}}"
      layout="vertical"
      bind:change="onFirstChange"
    >
      <t-step-item
        content="可自定义此处内容"
        title="已完成步骤"
      />
      <t-step-item
        content="可自定义此处内容"
        title="当前步骤"
      />
      <t-step-item
        content="可自定义此处内容"
        title="未完成步骤"
      />
      <t-step-item
        content="可自定义此处内容"
        title="未完成步骤"
      />
    </t-steps>
  </wx-view>
  <wx-view
    class="demo-desc"
  >
    垂直带图标步骤条
  </wx-view>
  <wx-view
    class="block"
  >
    <t-steps
      current="{{1}}"
      layout="vertical"
      bind:change="onSecondChange"
    >
      <t-step-item
        content="可自定义此处内容"
        icon="cart"
        title="已完成步骤"
      />
      <t-step-item
        content="可自定义此处内容"
        icon="cart"
        title="当前步骤"
      />
      <t-step-item
        content="可自定义此处内容"
        icon="cart"
        title="未完成步骤"
      />
      <t-step-item
        content="可自定义此处内容"
        icon="cart"
        title="未完成步骤"
      />
    </t-steps>
  </wx-view>
  <wx-view
    class="demo-desc"
  >
    垂直简略步骤条
  </wx-view>
  <wx-view
    class="block"
  >
    <t-steps
      current="{{1}}"
      layout="vertical"
      theme="dot"
      bind:change="onThirdChange"
    >
      <t-step-item
        content="可自定义此处内容"
        title="已完成步骤"
      />
      <t-step-item
        content="可自定义此处内容"
        title="当前步骤"
      />
      <t-step-item
        content="可自定义此处内容"
        title="未完成步骤"
      />
      <t-step-item
        content="可自定义此处内容"
        title="未完成步骤"
      />
    </t-steps>
  </wx-view>
  <wx-view
    class="demo-desc"
  >
    垂直带自定义内容步骤条
  </wx-view>
  <wx-view
    class="block"
  >
    <t-steps
      current="{{1}}"
      layout="vertical"
      bind:change="onThirdChange"
    >
      <t-step-item
        content="可自定义此处内容"
        title="已完成步骤"
      />
      <t-step-item
        content="可自定义此处内容"
        title="当前步骤"
      >
        <wx-view
          slot="extra"
        >
          <wx-image
            alt="图标"
            mode="widthFix"
            src="https://tdesign.gtimg.com/miniprogram/images/steps-extra.png"
            style="width: 100%"
          />
        </wx-view>
      </t-step-item>
      <t-step-item
        content="可自定义此处内容"
        title="未完成步骤"
      />
    </t-steps>
  </wx-view>
</vertical>
`;
